# solana-call-depth-test

./: Anchor.toml
programs/p1/: Cargo.toml
programs/p1/src/: lib.rs
programs/p2/: Cargo.toml
programs/p2/src/: lib.rs
programs/p3/: Cargo.toml
programs/p3/src/: lib.rs
programs/p4/: Cargo.toml
programs/p4/src/: lib.rs
programs/p5/: Cargo.toml
programs/p5/src/: lib.rs
programs/p6/: Cargo.toml
programs/p6/src/: lib.rs
tests/: ping.ts
